signe up of user and cmp fixed

--- a/ujob/src/app/signe-cmp/signe-cmp.component.html
+++ b/ujob/src/app/signe-cmp/signe-cmp.component.html
@@ -120,38 +120,17 @@
             </div>
             <form action="" method="post" name="login">
               <div class="form-group">
-                <label for="exampleInputEmail1">First Name</label>
+                <label for="exampleInputEmail1">Name Of Company</label>
                 <input
                   type="name"
                   name="First Name"
                   class="form-control"
                   id="email"
                   aria-describedby="emailHelp"
-                  placeholder="Enter First Name"
+                  placeholder="Enter Name Of Company"
                 />
               </div>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Last Name</label>
-                <input
-                  type="name"
-                  name="email"
-                  class="form-control"
-                  id="email"
-                  aria-describedby="emailHelp"
-                  placeholder="Enter Last Name"
-                />
-              </div>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Username</label>
-                <input
-                  type="name"
-                  name="email"
-                  class="form-control"
-                  id="email"
-                  aria-describedby="emailHelp"
-                  placeholder="Enter Username"
-                />
-              </div>
+
               <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
                 <input
@@ -174,7 +153,7 @@
                   placeholder="Enter Password"
                 />
               </div>
-              
+
               <div class="col-md-12 text-center">
                 <button
                   type="submit"
@@ -196,7 +175,6 @@
                   </a>
                 </p>
               </div>
-
             </form>
           </div>
         </div>
