royer fixed first page fixed home fxed

--- a/ujob/src/app/login-cmp/login-cmp.component.html
+++ b/ujob/src/app/login-cmp/login-cmp.component.html
@@ -145,9 +145,19 @@
               <div class="col-md-12 text-center">
                 <button
                   type="submit"
-                  class="btn btn-block mybtn btn-primary tx-tfm"
+                  class="btn btn-block mybtn btn-primary tx-tfm login"
                 >
                   Login
+                </button>
+              </div>
+              <br>
+              <div class="col-md-12 text-center">
+                <button
+                  type="submit"
+                  class="btn btn-block mybtn btn-primary tx-tfm login"
+                  routerLink="/sign-cmp"
+                >
+                  Sign Up
                 </button>
               </div>
               <div class="col-md-12">
