--- a/ujob/src/app/login-user/login-user.component.scss
+++ b/ujob/src/app/login-user/login-user.component.scss
@@ -67,3 +67,12 @@ max-width: 500px;
    color: #ff0000;
    }
    #second{display:none;}
+   
+   .login:hover {
+    color: #0d2d3e;
+    border-color: #0d2d3e;
+  }
+  .login {
+    background-color: #0d2d3e;
+    border-color: #0d2d3e;
+  }
