--- a/ujob/src/app/signe-cmp/signe-cmp.component.html
+++ b/ujob/src/app/signe-cmp/signe-cmp.component.html
@@ -157,7 +157,7 @@
               <div class="col-md-12 text-center">
                 <button
                   type="submit"
-                  class="btn btn-block mybtn btn-primary tx-tfm"
+                  class="btn btn-block mybtn btn-primary tx-tfm login"
                 >
                   Sign Up
                 </button>
