--- a/ujob/src/app/signe-user/signe-user.component.html
+++ b/ujob/src/app/signe-user/signe-user.component.html
@@ -178,11 +178,12 @@
               <div class="col-md-12 text-center">
                 <button
                   type="submit"
-                  class="btn btn-block mybtn btn-primary tx-tfm"
+                  class="btn btn-block mybtn btn-primary tx-tfm login"
                 >
                   Sign Up
                 </button>
               </div>
+              
               <div class="col-md-12">
                 <div class="login-or">
                   <hr class="hr-or" />
