fixe the router between the home page and the other component

--- a/ujob/src/app/home/home.component.html
+++ b/ujob/src/app/home/home.component.html
@@ -126,8 +126,9 @@
                         <span class="flaticon-development"></span>
                     </div>
                     <div class="cat-cap">
-                        <h5><a href="services.html">Strategy Planning </a></h5>
-                        <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
+                        <h5><a href="services.html"
+                          routerLink="/login-cmp">AS A COMPANY</a></h5>
+                        <p>Through this window, you can join us to get our best services and the best workers that you need.</p>
                     </div>
                 </div>
             </div>
@@ -137,8 +138,9 @@
                         <span class="flaticon-result"></span>
                     </div>
                     <div class="cat-cap">
-                        <h5><a href="services.html">Insurance Service</a></h5>
-                        <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
+                        <h5><a href="services.html" 
+                          routerLink="/login-user">AS A PEOPLE</a></h5>
+                        <p>Through this window, you can join us to get our best services and the best work that suits you.</p>
                     </div>
                 </div>
             </div>
@@ -148,8 +150,8 @@
                         <span class="flaticon-team"></span>
                     </div>
                     <div class="cat-cap">
-                        <h5><a href="services.html">Audit & Evaluation</a></h5>
-                        <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
+                        <h5><a href="services.html">PRIVAT ROOM</a></h5>
+                        <p>Because we are looking for you, can the company communication with their workers.</p>
                     </div>
                 </div>
             </div>
