--- a/ujob/src/app/home/home.component.html
+++ b/ujob/src/app/home/home.component.html
@@ -123,7 +123,7 @@
             <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="single-cat text-center mb-50">
                     <div class="cat-icon">
-                        <span class="flaticon-development"></span>
+                        <span class="far fa-building"></span>
                     </div>
                     <div class="cat-cap">
                         <h5><a href="services.html"
@@ -135,7 +135,7 @@
             <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="single-cat text-center mb-50">
                     <div class="cat-icon">
-                        <span class="flaticon-result"></span>
+                        <span class="far fa-user"></span>
                     </div>
                     <div class="cat-cap">
                         <h5><a href="services.html" 
