first sprint of template and router fixed

--- a/ujob/src/app/first-page/first-page.component.html
+++ b/ujob/src/app/first-page/first-page.component.html
@@ -65,7 +65,7 @@
               <div class="col-xl-2 col-lg-2">
                 <div class="logo">
                   <a href="index.html"
-                    ><img src="../../assets/assets/img/logo/logo.png" alt=""
+                    ><img src="../../assets/assets/img/logo/logo222.png" alt=""
                   /></a>
                 </div>
               </div>
@@ -164,7 +164,7 @@
                 <!-- logo -->
                 <div class="footer-logo">
                   <a href="index.html"
-                    ><img src="assets/img/logo/logo2_footer.png" alt=""
+                    ><img id="image" src="../../assets/assets/img/logo/logo2223.png" alt=""
                   /></a>
                 </div>
                 <div class="footer-tittle">
