--- a/ujob/src/app/home/home.component.html
+++ b/ujob/src/app/home/home.component.html
@@ -65,7 +65,7 @@
               <div class="col-xl-2 col-lg-2">
                 <div class="logo">
                   <a href="index.html"
-                    ><img src="../../assets/assets/img/logo/logo.png" alt=""
+                    ><img src="../../assets/assets/img/logo/logo222.png" alt=""
                   /></a>
                 </div>
               </div>
@@ -108,54 +108,70 @@
     <!-- Header End -->
   </header>
   <main>
-  <div class="categories-area section-padding30">
-    <div class="container">
+    <div class="categories-area section-padding30">
+      <div class="container">
         <div class="row">
-            <div class="col-lg-12">
-                <!-- Section Tittle -->
-                <div class="section-tittle mb-70">
-                    <span>Our Top Services</span>
-                    <h2>Our Best Services</h2>
-                </div>
+          <div class="col-lg-12">
+            <!-- Section Tittle -->
+            <div class="section-tittle mb-70">
+              <span>Our Top Services</span>
+              <h2>Our Best Services</h2>
             </div>
+          </div>
         </div>
         <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="single-cat text-center mb-50">
-                    <div class="cat-icon">
-                        <span class="far fa-building"></span>
-                    </div>
-                    <div class="cat-cap">
-                        <h5><a href="services.html"
-                          routerLink="/login-cmp">AS A COMPANY</a></h5>
-                        <p>Through this window, you can join us to get our best services and the best workers that you need.</p>
-                    </div>
-                </div>
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="single-cat text-center mb-50">
+              <div class="cat-icon">
+                <span class="far fa-building"></span>
+              </div>
+              <div class="cat-cap">
+                <h5>
+                  <a href="services.html" routerLink="/login-cmp"
+                    >FOR COMPANY</a
+                  >
+                </h5>
+                <p>
+                  Through this window, you can join us to get our best services
+                  and the best workers that you need.
+                </p>
+              </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="single-cat text-center mb-50">
-                    <div class="cat-icon">
-                        <span class="far fa-user"></span>
-                    </div>
-                    <div class="cat-cap">
-                        <h5><a href="services.html" 
-                          routerLink="/login-user">AS A PEOPLE</a></h5>
-                        <p>Through this window, you can join us to get our best services and the best work that suits you.</p>
-                    </div>
-                </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="single-cat text-center mb-50">
+              <div class="cat-icon">
+                <span class="far fa-user"></span>
+              </div>
+              <div class="cat-cap">
+                <h5>
+                  <a href="services.html" routerLink="/login-user"
+                    >FOR SEARCHER JOB</a
+                  >
+                </h5>
+                <p>
+                  Through this window, you can join us to get our best services
+                  and the best work that suits you.
+                </p>
+              </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="single-cat text-center mb-50">
-                    <div class="cat-icon">
-                        <span class="flaticon-team"></span>
-                    </div>
-                    <div class="cat-cap">
-                        <h5><a href="services.html">PRIVAT ROOM</a></h5>
-                        <p>Because we are looking for you, can the company communication with their workers.</p>
-                    </div>
-                </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="single-cat text-center mb-50">
+              <div class="cat-icon">
+                <span class="flaticon-team"></span>
+              </div>
+              <div class="cat-cap">
+                <h5><a href="services.html">PRIVAT ROOM</a></h5>
+                <p>
+                  Because we are looking for you, can the company communication
+                  with their workers.
+                </p>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-</main>
+  </main>
+</html>
