--- a/ujob/src/app/home/home.component.html
+++ b/ujob/src/app/home/home.component.html
@@ -35,7 +35,7 @@
                     <li>
                       <i class="far fa-clock"></i> Mon - SAT: 6.00 am - 10.00 pm
                     </li>
-                    <li>Sun: Closed</li>
+                    <li>ujob</li>
                   </ul>
                 </div>
                 <div class="header-info-right">
@@ -62,13 +62,13 @@
           <div class="container">
             <div class="row align-items-center">
               <!-- Logo -->
-              <div class="col-xl-2 col-lg-2">
+              <!-- <div class="col-xl-2 col-lg-2">
                 <div class="logo">
                   <a href="index.html"
                     ><img src="../../assets/assets/img/logo/logo.png" alt=""
                   /></a>
                 </div>
-              </div>
+              </div> -->
               <div class="col-xl-10 col-lg-10">
                 <div
                   class="menu-wrapper d-flex align-items-center justify-content-end"
@@ -108,52 +108,62 @@
     <!-- Header End -->
   </header>
   <main>
-  <div class="categories-area section-padding30">
-    <div class="container">
+    <div class="categories-area section-padding30">
+      <div class="container">
         <div class="row">
-            <div class="col-lg-12">
-                <!-- Section Tittle -->
-                <div class="section-tittle mb-70">
-                    <span>Our Top Services</span>
-                    <h2>Our Best Services</h2>
-                </div>
+          <div class="col-lg-12">
+            <!-- Section Tittle -->
+            <div class="section-tittle mb-70">
+              <span>Our Top Services</span>
+              <h2>Our Best Services</h2>
             </div>
+          </div>
         </div>
         <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="single-cat text-center mb-50">
-                    <div class="cat-icon">
-                        <span class="flaticon-development"></span>
-                    </div>
-                    <div class="cat-cap">
-                        <h5><a href="services.html">Strategy Planning </a></h5>
-                        <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
-                    </div>
-                </div>
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="single-cat text-center mb-50">
+              <div class="cat-icon">
+                <span class="flaticon-development"></span>
+              </div>
+              <div class="cat-cap">
+                <h5><a href="services.html">Strategy Planning </a></h5>
+                <p>
+                  There are many variations of passages of lorem Ipsum available
+                  but the new majority have suffered.
+                </p>
+              </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="single-cat text-center mb-50">
-                    <div class="cat-icon">
-                        <span class="flaticon-result"></span>
-                    </div>
-                    <div class="cat-cap">
-                        <h5><a href="services.html">Insurance Service</a></h5>
-                        <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
-                    </div>
-                </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="single-cat text-center mb-50">
+              <div class="cat-icon">
+                <span class="flaticon-result"></span>
+              </div>
+              <div class="cat-cap">
+                <h5><a href="services.html">Insurance Service</a></h5>
+                <p>
+                  There are many variations of passages of lorem Ipsum available
+                  but the new majority have suffered.
+                </p>
+              </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="single-cat text-center mb-50">
-                    <div class="cat-icon">
-                        <span class="flaticon-team"></span>
-                    </div>
-                    <div class="cat-cap">
-                        <h5><a href="services.html">Audit & Evaluation</a></h5>
-                        <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
-                    </div>
-                </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="single-cat text-center mb-50">
+              <div class="cat-icon">
+                <span class="flaticon-team"></span>
+              </div>
+              <div class="cat-cap">
+                <h5><a href="services.html">Audit & Evaluation</a></h5>
+                <p>
+                  There are many variations of passages of lorem Ipsum available
+                  but the new majority have suffered.
+                </p>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-</main>
+  </main>
+</html>
