--- a/ujob/src/app/my-profil-user/my-profil-user.component.html
+++ b/ujob/src/app/my-profil-user/my-profil-user.component.html
@@ -63,9 +63,9 @@
                 <div class="main-menu d-none d-lg-block">
                   <nav>
                     <ul id="navigation">
-                      <li><a href="index.html">HOME</a></li>
-                      <li><a href="about.html">PROFILE</a></li>
-                      <li><a href="services.html"></a></li>
+                      <li><a >HOME</a></li>
+                      <li><a>PROFILE</a></li>
+                      <li><a routerLink="/edit-profile-user">EDIT PROFILE</a></li>
                       <li>
                         <a href="blog.html"></a>
                         <ul class="submenu">
