--- a/ujob/src/app/home/home.component.html
+++ b/ujob/src/app/home/home.component.html
@@ -35,7 +35,7 @@
                     <li>
                       <i class="far fa-clock"></i> Mon - SAT: 6.00 am - 10.00 pm
                     </li>
-                    <li>ujob</li>
+                    <li>Sun: Closed</li>
                   </ul>
                 </div>
                 <div class="header-info-right">
@@ -123,17 +123,8 @@
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="single-cat text-center mb-50">
               <div class="cat-icon">
-                <span class="flaticon-development"></span>
+                <span class="far fa-building"></span>
               </div>
-              <div class="cat-cap">
-                <h5><a href="services.html">Strategy Planning </a></h5>
-                <p>
-                  There are many variations of passages of lorem Ipsum available
-                  but the new majority have suffered.
-                  <span class="far fa-building"></span>
-                </p>
-              </div>
-
               <div class="cat-cap">
                 <h5>
                   <a href="services.html" routerLink="/login-cmp"
@@ -150,17 +141,8 @@
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="single-cat text-center mb-50">
               <div class="cat-icon">
-                <span class="flaticon-result"></span>
+                <span class="far fa-user"></span>
               </div>
-              <div class="cat-cap">
-                <h5><a href="services.html">Insurance Service</a></h5>
-                <p>
-                  There are many variations of passages of lorem Ipsum available
-                  but the new majority have suffered.
-                  <span class="far fa-user"></span>
-                </p>
-              </div>
-
               <div class="cat-cap">
                 <h5>
                   <a href="services.html" routerLink="/login-user"
@@ -174,26 +156,20 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 col-sm-6">
+          <!-- <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="single-cat text-center mb-50">
               <div class="cat-icon">
                 <span class="flaticon-team"></span>
               </div>
               <div class="cat-cap">
-                <h5><a href="services.html">Audit & Evaluation</a></h5>
-                <p>
-                  There are many variations of passages of lorem Ipsum available
-                  but the new majority have suffered.
-                </p>
-
                 <h5><a href="services.html">PRIVAT ROOM</a></h5>
                 <p>
                   Because we are looking for you, can the company communication
                   with their workers.
                 </p>
               </div>
-            </div>
-          </div>
+            </div> -->
+          <!-- </div> -->
         </div>
       </div>
     </div>
