--- a/ujob/src/app/profile-user/profile-user.component.html
+++ b/ujob/src/app/profile-user/profile-user.component.html
@@ -63,9 +63,9 @@
                 <div class="main-menu d-none d-lg-block">
                   <nav>
                     <ul id="navigation">
-                      <li><a href="index.html"></a></li>
-                      <li><a href="about.html"></a></li>
-                      <li><a href="services.html"></a></li>
+                      <li><a ></a></li>
+                      <li><a></a></li>
+                      <li><a></a></li>
                       <li>
                         <a href="blog.html"></a>
                         <ul class="submenu">
@@ -108,7 +108,7 @@
                     <li class="email"><i class="fas fa-envelope"></i><a href="mailto: yourname@email.com">alan.doe@website.com</a></li>
                     <li class="phone"><i class="fas fa-phone"></i><a href="tel:0123 456 789">0123 456 789</a></li>
                     <li class="website"><i class="fas fa-globe"></i><a href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/orbit-free-resume-cv-bootstrap-theme-for-developers/" target="_blank">portfoliosite.com</a></li>
-                    <li class="linkedin"><i class="fab fa-linkedin-in"></i><a href="#" target="_blank">linkedin.com/in/alandoe</a></li>
+                  
                     <li class="github"><i class="fab fa-github"></i><a href="#" target="_blank">github.com/username</a></li>
                     <li class="twitter"><i class="fab fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li>
                 </ul>
@@ -120,11 +120,7 @@
                     <h5 class="meta">University of London</h5>
 	                    <div class="time">2016 - 2018</div>
                 </div><!--//item-->
-                <div class="item">
-                    <h4 class="degree">BSc in Applied Mathematics</h4>
-                    <h5 class="meta">Bristol University</h5>
-                    <div class="time">2011 - 2015</div>
-                </div><!--//item-->
+                
             </div><!--//education-container-->
             
             <div class="languages-container container-block">
@@ -204,37 +200,25 @@
             
             <section class="section projects-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-archive"></i></span>Projects</h2>
-                <div class="intro">
-                    <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
-                </div><!--//intro-->
+                
                 <div class="item">
-                    <span class="project-title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/coderpro-bootstrap-4-startup-template-for-software-projects/" target="_blank">CoderPro</a></span> - <span class="project-tagline">A responsive website template designed to help developers launch their software projects. </span>
+                    <span class="project-title">blabla</span> - <span class="project-tagline">A responsive website template designed to help developers launch their software projects. </span>
                     
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/launch-bootstrap-4-template-for-saas-businesses/" target="_blank">Launch</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote their products or services.</span>
+                    <span class="project-title">Launch</span> - <span class="project-tagline">A responsive website template designed to help startups promote their products or services.</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/devcard-bootstrap-4-vcard-portfolio-template-for-software-developers/" target="_blank">DevCard</a></span> - <span class="project-tagline">A portfolio website template designed for software developers.</span>
+                    <span class="project-title">DevCard</span> - <span class="project-tagline">A portfolio website template designed for software developers.</span>
                 </div><!--//item-->
-                <div class="item">
-                    <span class="project-title"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/bootstrap-template-for-mobile-apps-nova-pro/" target="_blank">Nova Pro</a></span> - <span class="project-tagline">A responsive Bootstrap theme designed to help app developers promote their mobile apps</span>
-                </div><!--//item-->
-                <div class="item">
-                    <span class="project-title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-web-development-agencies-devstudio/" target="_blank">DevStudio</a></span> - 
-                    <span class="project-tagline">A responsive website template designed to help web developers/designers market their services. </span>
-                </div><!--//item-->
+               
+                
             </section><!--//section-->
             
             <section class="skills-section section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-rocket"></i></span>Skills &amp; Proficiency</h2>
                 <div class="skillset">        
-                    <div class="item">
-                        <h3 class="level-title">Python &amp; Django</h3>
-                        <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 99%" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>                               
-                    </div><!--//item-->
+                    
                     
                     <div class="item">
                         <h3 class="level-title">Javascript &amp; jQuery</h3>
@@ -257,12 +241,7 @@
 						</div>                                
                     </div><!--//item-->
                     
-                    <div class="item">
-                        <h3 class="level-title">Ruby on Rails</h3>
-                        <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>                                  
-                    </div><!--//item-->
+                    
                     
                     <div class="item">
                         <h3 class="level-title">Sketch &amp; Photoshop</h3>
@@ -287,3 +266,4 @@
 </body>
 </div>
 </html> 
+
