--- a/ujob/src/app/edit-profile-user/edit-profile-user.component.html
+++ b/ujob/src/app/edit-profile-user/edit-profile-user.component.html
@@ -200,7 +200,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-md-4 control-label" for="email">email </label>
+                <label class="col-md-4 control-label" for="email">Email </label>
 
                 <div class="col-md-4">
                   <div class="input-group">
