--- a/ujob/src/app/edit-profile-user/edit-profile-user.component.html
+++ b/ujob/src/app/edit-profile-user/edit-profile-user.component.html
@@ -129,7 +129,7 @@
     <!-- Header End -->
   </header>
   <body>
-    <div class="container">
+    <div class="container container1">
       <div class="row">
         <div class="col-md-10">
           <form class="form-horizontal">
