--- a/ujob/src/app/payme/payme.component.scss
+++ b/ujob/src/app/payme/payme.component.scss
@@ -3,7 +3,7 @@ img {
 }
 .container1 {
   background-color: rgb(179, 179, 179);
-  // margin: auto;
-  // width: 80%;
-  // padding: 20%;
+  margin: auto;
+  width: 80%;
+  padding: 20%;
 }
