--- a/ujob/src/app/edit-profile-user/edit-profile-user.component.html
+++ b/ujob/src/app/edit-profile-user/edit-profile-user.component.html
@@ -253,8 +253,8 @@
 
               <!-- Text input-->
               <div class="form-group">
-                <label class="col-md-4 control-label" for="Your Cite Web"
-                  >Cite Web</label
+                <label class="col-md-4 control-label" for="Your Web Site"
+                  >Web Site</label
                 >
                 <div class="col-md-4">
                   <div class="input-group">
@@ -263,9 +263,9 @@
                     </div>
                     <input
                       id="Web"
-                      name="Cite Web"
+                      name="Web Site"
                       type="text"
-                      placeholder="Cite Web"
+                      placeholder="Web Site"
                       class="form-control input-md"
                     />
                   </div>
