--- a/ujob/src/app/login-user/login-user.component.html
+++ b/ujob/src/app/login-user/login-user.component.html
@@ -120,19 +120,21 @@
             </div>
             <form action="" method="post" name="login">
               <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
+                <label for="exampleInputEmail1">Username</label>
                 <input
-                  type="email"
-                  name="email"
+                  [(ngModel)]="loginUserData.username"
+                  type="text"
+                  name="username"
                   class="form-control"
                   id="email"
                   aria-describedby="emailHelp"
-                  placeholder="Enter email"
+                  placeholder="Enter username"
                 />
               </div>
               <div class="form-group">
                 <label for="exampleInputEmail1">Password</label>
                 <input
+                  [(ngModel)]="loginUserData.password"
                   type="password"
                   name="password"
                   id="password"
@@ -141,16 +143,17 @@
                   placeholder="Enter Password"
                 />
               </div>
-              
+
               <div class="col-md-12 text-center">
                 <button
+                  (click)="loginUser()"
                   type="submit"
                   class="btn btn-block mybtn btn-primary tx-tfm login"
                 >
                   Login
                 </button>
               </div>
-              <br>
+              <br />
               <div class="col-md-12 text-center">
                 <button
                   type="submit"
@@ -173,7 +176,6 @@
                   </a>
                 </p>
               </div>
-
             </form>
           </div>
         </div>
