--- a/ujob/src/app/signe-cmp/signe-cmp.component.html
+++ b/ujob/src/app/signe-cmp/signe-cmp.component.html
@@ -122,6 +122,7 @@
               <div class="form-group">
                 <label for="exampleInputEmail1">Name Of Company</label>
                 <input
+                  [(ngModel)]="registerCompanyData.username"
                   type="name"
                   name="First Name"
                   class="form-control"
@@ -134,6 +135,7 @@
               <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
                 <input
+                  [(ngModel)]="registerCompanyData.email"
                   type="email"
                   name="email"
                   class="form-control"
@@ -145,6 +147,7 @@
               <div class="form-group">
                 <label for="exampleInputEmail1">Password</label>
                 <input
+                  [(ngModel)]="registerCompanyData.password"
                   type="password"
                   name="password"
                   id="password"
@@ -156,6 +159,7 @@
 
               <div class="col-md-12 text-center">
                 <button
+                  (click)="registerCompany()"
                   type="submit"
                   class="btn btn-block mybtn btn-primary tx-tfm login"
                 >
