--- a/ujob/src/app/edit-profile-user/edit-profile-user.component.html
+++ b/ujob/src/app/edit-profile-user/edit-profile-user.component.html
@@ -99,8 +99,11 @@
                     <nav>
                       <ul id="navigation">
                         <li><a>HOME</a></li>
-                        <li><a routerLink="/myprofile-user">PROFILE</a></li>
-                        <li><a>EDIT PROFILE</a></li>
+                        <li><a routerLink="/prof-user"> MY PROFILE</a></li>
+                        <li><a routerLink="/myprofile-user"> MY RESUME</a></li>
+                        <li>
+                          <a routerLink="/edit-profile-user">EDIT RESUME</a>
+                        </li>
                         <li>
                           <a href="blog.html"></a>
                           <ul class="submenu">
