--- a/ujob/src/app/prof-user/prof-user.component.html
+++ b/ujob/src/app/prof-user/prof-user.component.html
@@ -1,3 +1,4 @@
+
 <html>
   <title>ujob</title>
   <meta charset="UTF-8" />
@@ -27,6 +28,7 @@
     }
   </style>
   <header>
+    <!-- Header Start -->
     <div class="header-area">
       <div class="main-header">
         <div class="header-top d-none d-lg-block">
@@ -75,17 +77,18 @@
                 </div>
               </div>
               <div class="col-xl-10 col-lg-10">
-                <!-- <div
+                <div
                   class="menu-wrapper d-flex align-items-center justify-content-end"
-                > -->
-                <!-- Main-menu -->
-                <!-- <div class="main-menu d-none d-lg-block">
+                >
+                  <!-- Main-menu -->
+                  <div class="main-menu d-none d-lg-block">
                     <nav>
                       <ul id="navigation">
                         <li><a>HOME</a></li>
-                        <li><a>PROFILE</a></li>
+                        <li><a routerLink="/prof-user"> MY PROFILE</a></li>
+                        <li><a routerLink="/myprofile-user"> MY RESUME</a></li>
                         <li>
-                          <a routerLink="/edit-profile-user">EDIT PROFILE</a>
+                          <a routerLink="/edit-profile-user">EDIT RESUME</a>
                         </li>
                         <li>
                           <a href="blog.html"></a>
@@ -100,8 +103,8 @@
                         <li><a href="contact.html"></a></li>
                       </ul>
                     </nav>
-                  </div> -->
-                <!-- </div> -->
+                  </div>
+                </div>
               </div>
               <!-- Mobile Menu -->
               <div class="col-12">
@@ -112,8 +115,9 @@
         </div>
       </div>
     </div>
+    <!-- Header End -->
   </header>
-  <div class="w3-top">
+  <!-- <div class="w3-top">
     <div class="w3-bar w3-theme-d2 w3-left-align w3-large">
       <a
         class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-theme-d2"
@@ -171,8 +175,9 @@
         />
       </a>
     </div>
-  </div>
+  </div> -->
   <body class="w3-theme-l5">
+    
     <!-- Navbar -->
 
     <!-- Navbar on small screens -->
@@ -198,7 +203,7 @@
           <!-- Profile -->
           <div class="w3-card w3-round w3-white">
             <div class="w3-container">
-              <h4 class="w3-center">GOOGLE</h4>
+              <h4 class="w3-center">{{ user.username }}</h4>
               <p class="w3-center">
                 <img
                   src="https://www.agl-serveis.com/wp-content/uploads/2019/03/20150805204041-google-company-building-corporate.jpeg"
@@ -479,20 +484,71 @@
       <!-- End Page Container -->
     </div>
     <br />
-
+    <div class="w3-top">
+      <div class="w3-bar w3-theme-d2 w3-left-align w3-large">
+        <a
+          class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-theme-d2"
+          href="javascript:void(0);"
+          onclick="openNav()"
+          ><i class="fa fa-bars"></i
+        ></a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-theme-d4"
+          ><i class="fa fa-home w3-margin-right"></i>Logo</a
+        >
+        <a
+          href="#"
+          class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white"
+          title="News"
+          ><i class="fa fa-globe"></i
+        ></a>
+        <a
+          href="#"
+          class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white"
+          title="Account Settings"
+          ><i class="fa fa-user"></i
+        ></a>
+        <a
+          href="#"
+          class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white"
+          title="Messages"
+          ><i class="fa fa-envelope"></i
+        ></a>
+        <div class="w3-dropdown-hover w3-hide-small">
+          <button class="w3-button w3-padding-large" title="Notifications">
+            <i class="fa fa-bell"></i
+            ><span class="w3-badge w3-right w3-small w3-green">3</span>
+          </button>
+          <div
+            class="w3-dropdown-content w3-card-4 w3-bar-block"
+            style="width: 300px"
+          >
+            <a href="#" class="w3-bar-item w3-button">One new friend request</a>
+            <a href="#" class="w3-bar-item w3-button"
+              >John Doe posted on your wall</a
+            >
+            <a href="#" class="w3-bar-item w3-button">Jane likes your post</a>
+          </div>
+        </div>
+        <a
+          href="#"
+          class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white"
+          title="My Account"
+        >
+          <img
+            src="https://www.agl-serveis.com/wp-content/uploads/2019/03/20150805204041-google-company-building-corporate.jpeg"
+            class="w3-circle"
+            style="height: 23px; width: 23px"
+            alt="Avatar"
+          />
+        </a>
+      </div>
+    </div>
     <!-- Footer -->
     <footer class="w3-container w3-theme-d3 w3-padding-16">
       <h5>Ujob</h5>
     </footer>
 
-    <footer class="w3-container w3-theme-d5">
-      <!-- <p>
-        Powered by
-        <a href="https://www.w3schools.com/w3css/default.asp" target="_blank"
-          >w3.css</a
-        >
-      </p> -->
-    </footer>
+   
 
     <script>
       // Accordion
@@ -519,6 +575,8 @@
           x.className = x.className.replace(" w3-show", "");
         }
       }
+
+      
     </script>
   </body>
 </html>
