--- a/ujob/src/app/my-profil-cmp/my-profil-cmp.component.html
+++ b/ujob/src/app/my-profil-cmp/my-profil-cmp.component.html
@@ -1,1 +1,18 @@
-<p>my-profil-cmp works!</p>
+<form>
+  <fieldset >
+    <div class="form-group">
+      <label for="newPost"></label>
+      <input
+        type="text"
+        id="newPost"
+        class="form-control"
+        placeholder="New post"
+        [(ngModel)]="test"
+        name="first"
+
+      />
+    </div>
+
+    <button type="submit" class="btn btn-primary" (click)="postClick()">Post</button>
+  </fieldset>
+</form>
