--- a/ujob/src/app/my-profil-user/my-profil-user.component.html
+++ b/ujob/src/app/my-profil-user/my-profil-user.component.html
@@ -105,8 +105,8 @@
               src="../../assets/assets/assets/images/profile.png"
               alt=""
             />
-            <h1 class="name">{{ user.username }}</h1>
-            <h3 class="tagline">Full Stack Developer</h3>
+            <h1 class="name">{{user.firstName}} <br> {{user.lastName}}</h1>
+            <h3 class="tagline">{{user.job}}</h3>
           </div>
           <!--//profile-container-->
 
@@ -114,29 +114,29 @@
             <ul class="list-unstyled contact-list">
               <li class="email">
                 <i class="fas fa-envelope"></i
-                ><a href="mailto: yourname@email.com">alan.doe@website.com</a>
+                ><a href="mailto: yourname@email.com">{{user.email}}</a>
               </li>
               <li class="phone">
                 <i class="fas fa-phone"></i
-                ><a href="tel:0123 456 789">0123 456 789</a>
+                ><a>{{user.phone}}</a>
               </li>
               <li class="website">
                 <i class="fas fa-globe"></i
                 ><a
                   href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/orbit-free-resume-cv-bootstrap-theme-for-developers/"
                   target="_blank"
-                  >portfoliosite.com</a
+                  >{{user.website}}</a
                 >
               </li>
 
               <li class="github">
                 <i class="fab fa-github"></i
-                ><a href="#" target="_blank">github.com/username</a>
+                ><a href="#" target="_blank">{{user.github}}</a>
               </li>
               <li class="twitter">
                 <i class="fab fa-twitter"></i
                 ><a href="https://twitter.com/3rdwave_themes" target="_blank"
-                  >@twittername</a
+                  >{{user.twitter}}</a
                 >
               </li>
             </ul>
@@ -145,9 +145,9 @@
           <div class="education-container container-block">
             <h2 class="container-block-title">Education</h2>
             <div class="item">
-              <h4 class="degree">MSc in Computer Science</h4>
-              <h5 class="meta">University of London</h5>
-              <div class="time">2016 - 2018</div>
+              <h4 class="degree">{{user.diploma}}</h4>
+              <h5 class="meta">{{user.School}}</h5>
+              <div class="time">{{user.dateSc}}</div>
             </div>
             <!--//item-->
           </div>
@@ -156,9 +156,9 @@
           <div class="languages-container container-block">
             <h2 class="container-block-title">Languages</h2>
             <ul class="list-unstyled interests-list">
-              <li>English <span class="lang-desc">(Native)</span></li>
-              <li>French <span class="lang-desc">(Professional)</span></li>
-              <li>Spanish <span class="lang-desc">(Professional)</span></li>
+              <li>{{user.language1}}<span class="lang-desc">(Native)</span></li>
+              <li>{{user.language2}}<span class="lang-desc">(Professional)</span></li>
+              <li>{{user.language3}}<span class="lang-desc">(Professional)</span></li>
             </ul>
           </div>
           <!--//interests-->
@@ -166,9 +166,9 @@
           <div class="interests-container container-block">
             <h2 class="container-block-title">Interests</h2>
             <ul class="list-unstyled interests-list">
-              <li>Climbing</li>
-              <li>Snowboarding</li>
-              <li>Cooking</li>
+              <li>{{user.interest1}}</li>
+              <li>{{user.interest2}}</li>
+              <li>{{user.interest3}}</li>
             </ul>
           </div>
           <!--//interests-->
