--- a/ujob/src/app/my-profil-cmp/my-profil-cmp.component.html
+++ b/ujob/src/app/my-profil-cmp/my-profil-cmp.component.html
@@ -13,6 +13,7 @@
       />
     </div>
 
-    <button type="submit" class="btn btn-primary" (click)="postClick()">Post</button>
+    <button type="submit" *ngIf="!check" class="btn btn-primary" (click)="postClick()">Post</button>
+    <button type="submit" *ngIf="check" class="btn btn-primary" (click)="putClick()">Update</button>
   </fieldset>
 </form>
