--- a/ujob/src/app/login-cmp/login-cmp.component.html
+++ b/ujob/src/app/login-cmp/login-cmp.component.html
@@ -146,6 +146,7 @@
 
               <div class="col-md-12 text-center">
                 <button
+                   routerLink="/myprofile-cmp"
                   (click)="loginCompany()"
                   type="submit"
                   class="btn btn-block mybtn btn-primary tx-tfm login"
