--- a/ujob/src/app/my-profil-cmp/my-profil-cmp.component.html
+++ b/ujob/src/app/my-profil-cmp/my-profil-cmp.component.html
@@ -481,7 +481,7 @@
     <br />
 
     <!-- Footer -->
-    <footer class="w3-container w3-theme-d3 w3-padding-16">
+    <!-- <footer class="w3-container w3-theme-d3 w3-padding-16">
       <h5>Ujob</h5>
     </footer>
 
@@ -492,7 +492,7 @@
           >w3.css</a
         >
       </p> -->
-    </footer>
+    <!-- </footer> --> -->
 
     <script>
       // Accordion
