--- a/ujob/src/app/my-profil-user/my-profil-user.component.html
+++ b/ujob/src/app/my-profil-user/my-profil-user.component.html
@@ -387,10 +387,10 @@
         <!--//main-body-->
       </div>
 
-      <footer class="footer">
+      <!-- <footer class="footer">
         <div class="text-center">
           <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
-          <small class="copyright"
+          <!-- <small class="copyright"
             >Designed with <i class="fas fa-heart"></i> by
             <a href="http://themes.3rdwavemedia.com" target="_blank"
               >Xiaoying Riley</a
@@ -398,8 +398,8 @@
             for developers</small
           >
         </div>
-        <!--//container-->
-      </footer>
+        //container -->
+      <!-- </footer> --> -->
       <!--//footer-->
     </body>
   </div>
