--- a/ujob/src/app/prof-user/prof-user.component.html
+++ b/ujob/src/app/prof-user/prof-user.component.html
@@ -203,7 +203,7 @@
           <!-- Profile -->
           <div class="w3-card w3-round w3-white">
             <div class="w3-container">
-              <h4 class="w3-center">{{ user.firstName }}{{" "}} {{ user.lastName }}</h4>
+              <h4 class="w3-center">{{user.email}}</h4>
               <p class="w3-center">
                 <img
                   src="https://www.agl-serveis.com/wp-content/uploads/2019/03/20150805204041-google-company-building-corporate.jpeg"
@@ -215,7 +215,7 @@
               <hr />
               <p>
                 <i class="fa fa-user fa-fw w3-margin-right w3-text-theme"></i>
-                {{user.username}}
+                {{user.email}}
               </p>
               <p>
                 <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>
@@ -544,9 +544,9 @@
       </div>
     </div>
     <!-- Footer -->
-    <footer class="w3-container w3-theme-d3 w3-padding-16">
+    <!-- <footer class="w3-container w3-theme-d3 w3-padding-16">
       <h5>Ujob</h5>
-    </footer>
+    </footer> -->
 
    
 
