--- a/ujob/src/app/signe-cmp/signe-cmp.component.html
+++ b/ujob/src/app/signe-cmp/signe-cmp.component.html
@@ -118,7 +118,7 @@
                 <h1>Sign Up</h1>
               </div>
             </div>
-            <form action="" method="post" name="login">
+            <!-- <form action="" method="post" name="login"> -->
               <div class="form-group">
                 <label for="exampleInputEmail1">Name Of Company</label>
                 <input
@@ -180,7 +180,7 @@
                   </a>
                 </p>
               </div>
-            </form>
+            <!-- </form> -->
           </div>
         </div>
       </div>
