--- a/ujob/src/app/signe-user/signe-user.component.html
+++ b/ujob/src/app/signe-user/signe-user.component.html
@@ -197,18 +197,13 @@
                 </div>
               </div>
               <div class="col-md-12 mb-3">
-                <!-- <p class="text-center">
-                  <a href="/auth/google" class="google btn mybtn"
+                <p class="text-center">
+                  <a
+                    href="http://localhost:3000/auth/google"
+                    class="google btn mybtn"
                     ><i class="fa fa-google-plus"> </i> Signup using Google
                   </a>
-                </p> -->
-                <button
-                  (click)="getUser()"
-                  type="submit"
-                  class="btn btn-block mybtn btn-primary tx-tfm login"
-                >
-                  Sign Up with google
-                </button>
+                </p>
               </div>
             </form>
           </div>
