--- a/ujob/src/app/prof-user/prof-user.component.html
+++ b/ujob/src/app/prof-user/prof-user.component.html
@@ -1,4 +1,3 @@
-
 <html>
   <title>ujob</title>
   <meta charset="UTF-8" />
@@ -177,7 +176,6 @@
     </div>
   </div> -->
   <body class="w3-theme-l5">
-    
     <!-- Navbar -->
 
     <!-- Navbar on small screens -->
@@ -203,7 +201,7 @@
           <!-- Profile -->
           <div class="w3-card w3-round w3-white">
             <div class="w3-container">
-              <h4 class="w3-center">{{ user.firstName }}{{" "}} {{ user.lastName }}</h4>
+              <h4 class="w3-center">{{ user.username }}</h4>
               <p class="w3-center">
                 <img
                   src="https://www.agl-serveis.com/wp-content/uploads/2019/03/20150805204041-google-company-building-corporate.jpeg"
@@ -215,7 +213,7 @@
               <hr />
               <p>
                 <i class="fa fa-user fa-fw w3-margin-right w3-text-theme"></i>
-                {{user.email}}
+                {{ user.email }}
               </p>
               <p>
                 <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>
@@ -376,7 +374,7 @@
               style="width: 60px"
             />
             <span class="w3-right w3-opacity">1 min</span>
-            <h4>{{user.username}}</h4>
+            <h4>{{ user.username }}</h4>
             <br />
             <hr class="w3-clear" />
             <p>
@@ -394,7 +392,6 @@
                   class="w3-margin-bottom"
                 />
               </div>
-           
             </div>
             <button
               type="button"
@@ -409,9 +406,6 @@
               <i class="fa fa-comment"></i>  Comment
             </button>
           </div>
-
-          
-
 
           <!-- End Middle Column -->
         </div>
@@ -548,8 +542,6 @@
       <h5>Ujob</h5>
     </footer> -->
 
-   
-
     <script>
       // Accordion
       function myFunction(id) {
@@ -575,8 +567,6 @@
           x.className = x.className.replace(" w3-show", "");
         }
       }
-
-      
     </script>
   </body>
 </html>
