--- a/ujob/src/app/signe-user/signe-user.component.html
+++ b/ujob/src/app/signe-user/signe-user.component.html
@@ -122,6 +122,7 @@
               <div class="form-group">
                 <label for="exampleInputEmail1">First Name</label>
                 <input
+                  [(ngModel)]="registerUserData.firstName"
                   type="name"
                   name="First Name"
                   class="form-control"
@@ -133,6 +134,7 @@
               <div class="form-group">
                 <label for="exampleInputEmail1">Last Name</label>
                 <input
+                  [(ngModel)]="registerUserData.lastName"
                   type="name"
                   name="email"
                   class="form-control"
@@ -144,6 +146,7 @@
               <div class="form-group">
                 <label for="exampleInputEmail1">Username</label>
                 <input
+                  [(ngModel)]="registerUserData.username"
                   type="name"
                   name="email"
                   class="form-control"
@@ -155,6 +158,7 @@
               <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
                 <input
+                  [(ngModel)]="registerUserData.email"
                   type="email"
                   name="email"
                   class="form-control"
@@ -166,6 +170,7 @@
               <div class="form-group">
                 <label for="exampleInputEmail1">Password</label>
                 <input
+                  [(ngModel)]="registerUserData.password"
                   type="password"
                   name="password"
                   id="password"
@@ -177,6 +182,7 @@
 
               <div class="col-md-12 text-center">
                 <button
+                  (click)="registerUser()"
                   type="submit"
                   class="btn btn-block mybtn btn-primary tx-tfm login"
                 >
