--- a/ujob/src/app/signe-cmp/signe-cmp.component.html
+++ b/ujob/src/app/signe-cmp/signe-cmp.component.html
@@ -119,67 +119,69 @@
               </div>
             </div>
             <!-- <form action="" method="post" name="login"> -->
-              <div class="form-group">
-                <label for="exampleInputEmail1">Name Of Company</label>
-                <input
-                  [(ngModel)]="registerCompanyData.username"
-                  type="name"
-                  name="First Name"
-                  class="form-control"
-                  id="email"
-                  aria-describedby="emailHelp"
-                  placeholder="Enter Name Of Company"
-                />
-              </div>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Name Of Company</label>
+              <input
+                [(ngModel)]="registerCompanyData.username"
+                type="name"
+                name="First Name"
+                class="form-control"
+                id="email"
+                aria-describedby="emailHelp"
+                placeholder="Enter Name Of Company"
+              />
+            </div>
 
-              <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input
-                  [(ngModel)]="registerCompanyData.email"
-                  type="email"
-                  name="email"
-                  class="form-control"
-                  id="email"
-                  aria-describedby="emailHelp"
-                  placeholder="Enter email"
-                />
-              </div>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Password</label>
-                <input
-                  [(ngModel)]="registerCompanyData.password"
-                  type="password"
-                  name="password"
-                  id="password"
-                  class="form-control"
-                  aria-describedby="emailHelp"
-                  placeholder="Enter Password"
-                />
-              </div>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input
+                [(ngModel)]="registerCompanyData.email"
+                type="email"
+                name="email"
+                class="form-control"
+                id="email"
+                aria-describedby="emailHelp"
+                placeholder="Enter email"
+              />
+            </div>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Password</label>
+              <input
+                [(ngModel)]="registerCompanyData.password"
+                type="password"
+                name="password"
+                id="password"
+                class="form-control"
+                aria-describedby="emailHelp"
+                placeholder="Enter Password"
+              />
+            </div>
 
-              <div class="col-md-12 text-center">
-                <button
-                  (click)="registerCompany()"
-                  type="submit"
-                  class="btn btn-block mybtn btn-primary tx-tfm login"
-                  routerLink="/login-cmp"
-                >
-                  Sign Up
-                </button>
+            <div class="col-md-12 text-center">
+              <button
+                (click)="registerCompany()"
+                type="submit"
+                class="btn btn-block mybtn btn-primary tx-tfm login"
+                routerLink="/login-cmp"
+              >
+                Sign Up
+              </button>
+            </div>
+            <div class="col-md-12">
+              <div class="login-or">
+                <hr class="hr-or" />
+                <span class="span-or">or</span>
               </div>
-              <div class="col-md-12">
-                <div class="login-or">
-                  <hr class="hr-or" />
-                  <span class="span-or">or</span>
-                </div>
-              </div>
-              <div class="col-md-12 mb-3">
-                <p class="text-center">
-                  <a href="javascript:void();" class="google btn mybtn"
-                    ><i class="fa fa-google-plus"> </i> Signup using Google
-                  </a>
-                </p>
-              </div>
+            </div>
+            <div class="col-md-12 mb-3">
+              <p class="text-center">
+                <a
+                  href="http://localhost:3000/auth/google"
+                  class="google btn mybtn"
+                  ><i class="fa fa-google-plus"> </i> Signup using Google
+                </a>
+              </p>
+            </div>
             <!-- </form> -->
           </div>
         </div>
